--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,9 @@ services:
       - "5432:5432"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile  # optional if your Dockerfile is named 'Dockerfile' in context
+    ports:
+      - "3000:3000" # Map port 3000 inside container to 3000 on host
