--- a/api/package.json
+++ b/api/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "fastify": "^5.3.3",
     "ioredis": "^5.6.1",
+    "pg": "^8.16.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/ioredis": "^4.28.10",
     "@types/node": "^22.15.29",
+    "@types/pg": "^8.15.4",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
